Glass z-index fix + Positional adjustments

--- a/css/main.css
+++ b/css/main.css
@@ -40,5 +40,8 @@ h1 {
     border-radius: 15px;
     backdrop-filter: blur(5px);
     background: radial-gradient(at 50%, 0%, rgba(0,0,0,0), rgba(255,255,255,0.3));
-    box-shadow: 10px 10px 30px rgba(0,0,0,0.5)
+    box-shadow: 10px 10px 30px rgba(0,0,0,0.5);
+    margin-left: auto;
+    margin-right: auto;
+
 }
